--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
   url_launcher: ^4.2.0+2
+  flutter_webview_plugin: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
