--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
-  url_launcher: ^4.2.0+2
+  url_launcher: ^3.0.0
   flutter_webview_plugin: ^0.3.0+2
+  flutter_html_view: ^0.5.11
 
 dev_dependencies:
   flutter_test:
